Changelog
=========

Collage 1.2.2 (unreleased)
--------------------------

* Synched all .po files following jensens's changes and added french
  missing labels.
  [glenfant]

* Make a difference between types to be added to Collage and types 
  enabled for alias. This introduces a new whitelist in controlpanel.  
  [jensens]

* Feature "automatic split of rows with more than 3 entries" was broken. 
  Its fixed now. I also added an unbatched view for the row. 
  [jensens]

* Almost completed German translation.
  [jensens]

* Added Dutch translation (nl).
  [reinout]

* Added portuguese (pt) translation.
  [igbun]

* Added additional CSS classes to Collage blocks to make it easier to
  apply styles only for particular positions, content types, or Collage
  view names.
  [davisagli]

* Typo in collage.css.dtml
  [glenfant]

* Fixed issue where layouts would not be looked up correctly for
  aliases.
  [malthe]

* Added support for theme-specific overrides of Collage views.  See
  DEVELOPERS.txt for details.
  [davisagli]

* Update and sync french and english translation.
  [kdeldycke]


Collage 1.2.1 (2008-12-10)
--------------------------

https://svn.plone.org/collective/Products.Collage/tags/1.2.1/

* Moved event handlers in events.py module
  [glenfant]

* Fixed bug on searching (spaces in type name or non ascii searchable
  text). Found items titles are colored according their workflow state as in
  folder_contents (...)
  [glenfant]

* Use `folder_summary_view` instead of `folder_listing` in topic
  views. This fixes issue #43.
  [malthe]

* Added Alias target search limit in config panel.
  [glenfant]

* Optimizations of existing items view including link to target.
  [glenfant]

* Removed code for old Plone (< 3.1) support since we can't be used in
  Plone 3.0 or older anymore
  [glenfant]

* Memoizing where possible to speed up views (not sure to be exhaustive)
  [glenfant]

* New translations due to the control panel, and added translations synch
  script.