@@ -3,5 +3,5 @@
      if the new version adds an upgrade step
  -->
 <metadata>
-  <version>1.2.1</version>
+  <version>1.2.2</version>
 </metadata>
